# fastapi-openai

./: .gitignore  README.md  main.py  makefile  pyproject.toml
app/: main.py
app/modules/coffee/: prompt.py  router.py
app/utils/: openai.py
templates/: index.html
